// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Padded should display children 1`] = `
<div
  className="Padded"
>
  content
</div>
`;

exports[`Padded should extend className 1`] = `
<div
  className="Padded noPaddingBottom"
>
  content
</div>
`;
